# FNode

./: .gitignore  CMakeLists.txt
src/: fnode.h  fnode_shader_editor.c
